Judge/Temporary_Error/282.log
./temp/282/code.cpp:1:1: error: 'import' does not name a type
 import sys
 ^
